--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="%BASE_URL%logo.png" />
+   <link rel="icon" type="image/png" href="/logo.png" />
 
     <!-- iOS home screen icon -->
-    <link rel="apple-touch-icon" href="%BASE_URL%logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
   </head>
   <body class="bg-slate-50">
     <div id="root"></div>
